<?xml version="1.0"?>
<package>
  <name>centauro_terrain_integration</name>
  <version>0.1.0</version>
  <description>The centauro_terrain_integration package</description>
  <maintainer email="acho@kth.se">Abhishek Choudhary</maintainer>
  <author email="acho@kth.se">Abhishek Choudhary</author>

  <license>Apache 2.0</license>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>
  </export>
</package>





